src/app/(pages)/about/page.module.css
.main {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 2rem;
    min-height: 100vh;
    font-family: var(--font-ebgaramond);
    background-color: whitesmoke;
    position: relative;
}

.container {
    margin-top: 100px;
    padding-bottom: 15rem;    /* Footer height */

    width: 88%;
}

.mission-container {
    background-color: var(--neutral-tan);
    border-radius: 1rem;
    padding: 3rem;
}

.section-header {
    font-family: var(--font-playfair);
    font-size: 40px;
    font-weight: bold;
    letter-spacing: 3px;
    height: 50px;
    margin-bottom: 20px;
}

.section-text {
    font-family: var(--font-ebgaramond);
    font-size: 30px;
    letter-spacing: 0.4px;
    line-height: 50px;
}

.section-text > ul > li {
    list-style-position: inside;
    padding-left: 15px;
}

.vision-container {
    font-family: var(--font-ebgaramond);
    letter-spacing: 0.4px;
    margin-top: 10px;
    line-height: 27px;

    border-radius: 1rem;
    padding: 3rem;
}

.why-and-logo-container {
    display: flex;
}

.why-container {
    font-family: var(--font-ebgaramond);
    letter-spacing: 0.4px;
    margin-top: 10px;
    line-height: 27px;

    border-radius: 1rem;
    padding: 2rem;
    background-color: var(--neutral-tan);

    min-width: 65%;
}

.logo-container {
    font-family: var(--font-ebgaramond);
    letter-spacing: 0.4px;
    margin-top: 10px;
    line-height: 27px;

    border-radius: 1rem;
    padding: 3rem;
}

.logo {
    /* logo stuff that would be here if i wasn't insane */
}

.acvf-container {
    border-radius: 1rem;
    padding: 2rem;

    min-width: 65%;
    margin-bottom: 125px;
}

